<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view" android:layout_height="100dp"
    android:layout_width="50dp">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_userprofile"
            android:title="@string/userprofile" />

        <item
            android:id="@+id/footer_spacer_1"
            android:checkable="false"
            android:enabled="false"
            android:orderInCategory="200"
            android:title=""/>

        <item
            android:id="@+id/nav_currentorder"
            android:title="@string/currentorders"/>

        <item
            android:id="@+id/footer_spacer_4"
            android:checkable="false"
            android:enabled="false"
            android:orderInCategory="200"
            android:title=""/>

        <item
            android:id="@+id/nav_orderhistory"
            android:title="@string/orderhistory"/>

        <item
            android:id="@+id/footer_spacer_5"
            android:checkable="false"
            android:enabled="false"
            android:orderInCategory="200"
            android:title=""/>

        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout"/>

    </group>
</menu>
